fixed some namecard issues

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -38,6 +38,7 @@ $padding-nameimg: 15px;
 $radius-nameimg: 50%;
 
 $marginleft-namecard: 30px;
+$maxwidth-namecard: 100px;
 $boxshadow-namecard: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 $radius-namecard:20px;
 $textalign-namecard: center;
